artifacts/1.23.4/contract.md
# Development System Contract 1.23.4

## RÁPIDO → BIEN → BARATO

Priority order: fastest delivery of the complete usable functionality, then
correctness, then lowest cost. Measure elapsed time through corrections and
required delivery, not just first output. Choose capable fast workers and spend
more on a model or an early prototype when it is expected to finish the
requested result sooner. Preserve accepted behavior, authorization and data
boundaries. Optional process is not a new release gate.

The model selected in the starting conversation is the orchestrator and is never
replaced because the roster recommends another model. The parent chooses agents;
the editable roster and native Codex TOMLs provide requested defaults, not
runtime evidence or an enforced provider chain. Verify the actual model and
tools at dispatch. DeepSeek/OpenCode may use available models, and a Codex
parent may choose available GPT/Go tools. Every role retains
its actual host capabilities and permission boundaries. In the SWE-2 experiment,
all descendants, including capable critics and browser roles, stay within the
SWE family with no Codex or Go fallback. Assign design, visual review and
Computer Use only to roles with the actual vision or browser capability needed;
if the selected family lacks it, report the gap rather than silently substituting
another family. General defaults may recommend Astra for visual work, but an
explicit lane family takes precedence.

## Instruction precedence and follow-through

Current user instructions and retained authorization take precedence over skill
guidelines and historical planning text. Preserve platform security requirements
and applicable repository protections. An old spec approval gate does not reopen
a decision already settled by the user. Load only relevant skill references.
If a skill actually blocks work, cite its exact file and instruction, explain
why it applies, and distinguish that requirement from your interpretation.
Complete independent authorized work while a genuinely missing answer is pending.

## Context and completion

Skill descriptions name a specific operation. Load only the relevant workflow
and supporting references; ordinary edits do not require a full repository map,
a new grill or a generated report. The selected execution method is sufficient:
workflow aliases do not create additional coordinators or fixed agent counts.
Define the requested behavior, relevant verification and authorized delivery
endpoint; continue through corrections instead of pausing after a first draft.
The repository adapter and local skills retain product architecture, commands,
release policy and design references without hardcoding the parent model.

## Execution and review

Use direct tools for deterministic searches, commands and evidence collection.
Use the selected orchestrator and parent-assigned roles for feature orchestration
and review. Use lower effort for explicitly simple work; specialists retain
their measured effort. Active host evidence establishes the effective effort.
Tie T3 CLI workers to their owning turn through `run-worker`; ending or losing
the turn stops the process group. Other hosts use native attached cancellation.
Delegate a bounded code task when another worker can reduce delivery time.
The parent resolves the provider once; selected workers execute rather than
restarting the fallback chain. Use compact task packets and relevant source
pointers; full-history inheritance needs a concrete reason.
Give each writer its repository, revision, ownership, intended behavior,
focused checks and stop condition. Preserve useful work on a fallback and
never restart an exhausted provider at every step. Batch independent reads and tool calls. Overlap independent CI and useful local
work when it shortens delivery; serialize edits and commands that mutate the
same build state. Different writers may run
concurrently only on explicitly disjoint ownership.

Simplification, behavior-first evidence, test-value review, correction and
objective verification remain logical responsibilities. They do not require
a new agent or conversation for each phase. Ordinary work uses one bounded
execution and parent review. Structured planning/review is reserved for observed
risk, dependencies or an explicit request. UX, DX and AX guide the smallest useful
change; they do not create audit stages. The orchestrator reviews ordinary
worker output. An independent capable reviewer assists on observed complex risk or an explicitly requested
independent review. A correction phase with no findings is an evidenced no-op;
after edits, review the delta and unresolved risks rather than restarting all
exploration. Never mark a critical finding resolved merely because a timeout
or budget elapsed. Preserve the host-bound correction and authorization checks.

Keep authorization for implementation, installation, commit, push, PR, merge,
release, production and paid services distinct. One explicit user instruction
may authorize several of those operations; retain it instead of requesting
the same permission again. An audit or a planner result grants none of them.

## Product evidence

Inspect the affected real flow as soon as it exists. A role with actual browser
capability may execute Computer Use within its authorized plan; the orchestrator
retains product judgment. Neutral delegated execution still receives only its
authorized execution plan; private rubrics and host authority remain separate.
Recording is a tool operation, not a reason to add another model.
Respect repository-specific browser mechanisms and authenticated roles.

Choose the quickest adequate verification for the changed behavior. New tests
are optional and must catch a named failure that leads to correction. Static
checks, real product flows and reviewers have distinct coverage; test counts
do not demonstrate delivery.
Protect authorization, data boundaries, idempotency and loss prevention.
Do not add implementation-mirroring tests or use line counts, test counts,
styling scores or a green workflow as proof of a usable product. Broad suites
require an applicable repository requirement or explicit user instruction.
Once affected checks and required gates pass, continue to the authorized delivery.
Repeat only for a relevant edit, failure, or unresolved concern. Reuse evidence
only while the tested candidate, command, inputs and environment remain applicable;
never bypass required hooks or CI to save time. Preserve test exit codes when
summarizing logs; a successful output filter does not prove a passing check.

## Skills and distribution

Catalog 0.43.0 retains the Jakub interface skills, make-interfaces-feel-better,
Show-me and PR Lens with exact upstream commits and hashes. Impeccable remains
the design-direction reference when installed. Choose the relevant specialty;
do not stack every design skill on every change. Use visual explanations when
they shorten review. Rendering stays local unless publication is authorized.

Ordinary development closure uses a concise final response. Generate a private
completion document when requested or needed for a durable evidence package. On-demand review and spec
explanations use the same `document` command and presentation. Show-me selects
the useful visual, PR Lens supplies static SVG maps, and explicit measurements
use HTML/CSS bars. Preserve the complete source packet for regeneration.
Check the actual delivered file with authorized Computer Use when visual
acceptance applies. A fixture preview does not certify the delivered document.
Generation creates no workflow or implementation authority. The delivery
command validates files and hashes before recording its recap step. Normal
conversation closure relies on the loaded skill calling the command; there is
no universal background turn-close hook. Working Backwards retains its workflow
presentation and authority boundaries.

The installable npm-format package is distributed as a versioned GitHub
release asset. Its provenance records the canonical commit and packaged file
hashes; the package manager's lockfile binds the downloaded tarball integrity.
This is not a claim of a cryptographic publisher signature. Installation never
writes HOME from a package lifecycle hook. The explicit `setup` command installs
the contract and skill catalog together. Product repositories pin one tooling
dependency and expose `pnpm ds`; changing model policy does not itself require
deploying their applications.

All previously published artifacts and manifests remain immutable rollback
targets. HOME is generated state. Verify package installation and changes in an
isolated HOME before applying an authorized installation to the operator.

Measure first useful evidence, accepted delivery, provider/CI/tool waits,
handoff failures, user corrections, and incremental provider usage. Keep
unknown costs unknown and do not add overlapping agent time to elapsed time.

## Visual delivery evidence

Completion reports attach authentic before/after screenshots and an actual recording for UI or backend changes with a visible outcome. Capture the baseline before implementation; preserve revision and capture context. Missing media stays explicit. Purely nonvisual work declares its reason and uses behavioral evidence. The shared document embeds media locally; presence never establishes verification or deployment authority. Follow flow-implement and working-backwards/report-reference.md.

## Visual acceptance before final evidence

Use the full pinned Impeccable skill and `design-quality`. After implementing
and finishing the chosen Impeccable playbook, the orchestrator assigns an
independent visual-capable critic. A distinct finish reviewer counts; self-review
does not. Resolve its concrete findings before recording final delivery evidence
from that candidate. Working screenshots are diagnostic, not final delivery.
Review only affected states again after corrections. A grounded numerical score
may support visible criteria; it does not create a threshold loop or prove user
approval. Start with one or two passes, evaluate convergence and change the
hypothesis when named gaps stall.
Follow `evidence-capture` for stable native tool batches and media integrity. An
assigned bounded worker may prepare scripts or existing media, without browser
authority unless its role has that capability. Use representative flows plus
distinct risks unless the user asks for exhaustive coverage; reuse evidence only
when candidate/state match.

## Durable design direction

Use `design-direction` for visual exploration and approved-design handoffs. Its
reusable method is available without an article link; project briefs retain the
selected identity, current corrections and approved references. Keep those briefs
discoverable through project pointers and include them in implementation packets.
Approved references must be retrievable and visible from the spec and relevant
tickets in a fresh thread. Follow design-direction's handoff reference; inspect
existing uploads before claiming them missing. Composition criteria govern
hierarchy and density even when generated text and data are illustrative.

Independent critique covers the requested composition, not only clipping or a
bounded correction list. Material deviations block visual acceptance. Compare a
representative screen early for a new shared language. Record the final visible
outcome inside the delivered clip and inspect its actual end. A rejected candidate
is an incomplete attempt, not an accepted delivery with a measured completion time.
Existing Impeccable, independent critique and evidence roles remain in place.

Visual and mixed grills use one interview. `drive-development-flow` recognizes
natural intent without requiring skill names; `design-direction` leads visual
decisions and `grill-with-docs` provides questions, HTML and answer recovery.
Classify brief statements as confirmed constraints, verified product facts or
provisional agent proposals. Preserve identity separately from composition,
hierarchy and interaction.

For an open surface in an existing identity, use Impeccable's matching procedure
and retain the observable order candidates → concept-seed → Impeccable decision
page → human selection. That page is the only runtime comparison/selection
surface; the questionnaire may show references but does not choose a direction.
Equalize data, task, states and finish between alternatives. Three requested
alternatives means exactly three materially different options. A
rejected set records the literal correction and revises the hypothesis without
forcing a selection. A selected direction resumes its recorded phase; a bounded
style correction remains a refinement.

## Implementation and orchestration continuity

Use flow-implement to carry state/data invariants into stateful changes and
verify meaningful transitions. A passing check that also passed the broken
behavior does not establish the claimed fix. Independent code review remains
useful when it catches these defects; it is not replaced by visual review.

For multi-step or resumed work, coding-orchestration's execution-continuity
reference owns startup, compact current state, recovery and outcome reconciliation.
Check usable account/organization and host capabilities early. Use a bounded
browser-QA pass only when the assigned role has the required browser capability
and the host supports the handoff; keep simple work direct and one driver per
session. Retry after relevant
new evidence, preserve useful output and complete the authorized delivery surface.
Required repo checks remain; broader reruns need an applicable gate or actual
change/failure. Update superseded completion claims after rejection.

## Exact execution across models

Exact instructions are the default for implementation and delegated work. The
parent resolves decisions once and supplies a small ordered packet with the
objective, exact root/revision, owned paths, settled decisions, actions/commands,
expected observations, mandatory checks, stop conditions and evidence receipt.
Outcome delegation is an explicit exception with a recorded reason and the same
acceptance bar. See coding-orchestration/references/execution-contract.md for
the single packet protocol, correction and model-handoff requirements.

Keep the execution method independent of model identity. Within authorized
provider and quota limits, reduce task size, serialize dependent steps and add
examples or checkpoints when a model needs more guidance. Never lower acceptance
or silently substitute providers to obtain a pass. A model without a required
capability reports the gap; identical quality across all models is not promised.

On interruption, preserve the candidate and applicable evidence, terminate the
old writer before ownership transfer, and hand off completed/pending steps,
failures, actual or unknown model identity, capabilities and retained authority.
Correct the first mismatch in a bounded packet. Repeat only checks affected by
changes or a required gate; implementation completion is not accepted behavior.

## Explicit event-driven orchestration workflow

The following model routes and scheduling rules apply to an explicitly selected
event-driven orchestration run. General role defaults outside that workflow are
unchanged. Where a workflow rule is more specific, it governs that run.


### Optional direct planning and one implementation packet

Version 1.23.1 adds an explicitly selected experimental alternative. Set
`planningMode: "direct"` and `packetization: "single"` in the private run
manifest to let Astra xhigh inspect the task/source while producing the plan,
and require that plan to contain exactly one bounded Flash implementation
packet. Omitting these options preserves the existing discovery and planning
path and existing packet selection. This alternative does not establish a
winning strategy or change ordinary orchestration defaults.

Direct planning removes only the separate coordinator discovery stage. It
retains independent plan review and correction, Jev judgments at the selected
boundaries, Flash execution, independent packet review, integration checks,
integrated review, neutral QA, configured visual critique and acceptance.
A single planned packet can require multiple reviewed correction attempts;
it does not impose a one-attempt limit or waive any criterion. All attempts,
provider waits, reviews and corrections stay in task timing and cost.

The driver records its selected options and controllerVersion 1.23.4. Model
routes, accounting rates and the durable scheduler remain compatible with the
explicitly pinned 1.23.0 policy and pricing files. Compare this alternative only
with complete per-arm accounting and accepted behavior; installation or passing
controller tests does not establish a product result.

### Execution-capable code review

Version 1.23.2 lets packet and integrated code reviewers execute the existing
checks with `danger-full-access`, including transient test-runner files. This
capability does not authorize product edits: immutable candidate tree, source
root, HEAD and branch guards must still pass before accepting the review or
applying changes. Discovery, planning, plan review and visual review remain
read-only. A rejected review needs a concrete defect or validation blocker with
command/evidence details; empty findings remain invalid. All correction,
integration, QA and acceptance gates retain their existing requirements.

### Portable planning instructions

Version 1.23.3 repeats the established packet portability requirements in every
planning and plan-correction prompt. Packet instructions use relative paths or
the controller's declared placeholders; they do not embed the source-root path
or instruct branch changes or commits. Existing validation and authoritative
worktree binding remain unchanged, so invalid plans still require correction.

### Stable acceptance progress and complete runtime receipts

Version 1.23.4 compares acceptance progress using the candidate and stable failed
criterion IDs. New evidence paths alone do not establish progress or justify
repeating the same failed acceptance state. Existing acceptance requirements
and correction gates remain unchanged.

A Codex process exit of zero establishes success only with a completed native
turn and final response. An interrupted or incomplete turn remains a failed
attempt with its available usage evidence. Measurement reports incomplete usage
per model as well as for the full arm; partial known usage does not make an
incomplete model record complete or turn unknown usage into zero.

### Selecting and invoking the bounded workflow

The current Sol or Astra orchestrator may select this workflow when the
already-authorized task has exact bounded packets, explicit dependencies and
independent write surfaces that benefit from durable ownership and event-driven
execution. Keep the current orchestrator; do not start a replacement parent.
Ordinary direct work and existing orchestration remain available. No global
classifier default or winning Jev context strategy is established by installation.

Prepare a private JSON run manifest outside the product repository. Pin its
`root`, `baseSha`, `arm`, `ticket`, `coordinator`, `taskFile`, `preflightPath`,
`qaRecipePath`, `acceptanceIds`, `requiresVisualReview`, `evidenceDirectory`,
`workerRoots`, `credentialFile`, `dependencyLinks`, `concurrency` and `jevMode`.
The preflight must reference actual environment and browser readiness evidence;
a created file alone does not establish readiness. The task and QA recipe carry
the accepted behavior, permitted scope, checks and authorized endpoint.
`coordinator` must match the actual starting model and effort. Use an explicit
`compact` or `flow` Jev mode for a comparative run; choose any future default
only after the complete acceptance and cost results are reviewed.

Invoke the installed, source-pinned CLI:

```sh
aohys-development-system jev-workflow --input /absolute/private/run.json --json
aohys-development-system jev-workflow-measure --input /absolute/private/execution --json
```

The first command dispatches authorized work through the pinned adapters; it is
not a read-only planner. The second records the full run measurement. Inspect
`events.jsonl`, per-job `receipt.json`, the workflow state and acceptance evidence
before reporting completion. An invalid plan can be checked separately with
`validate-atom-plan --plan /absolute/private/plan.json --json`. Legacy spawn
rewriting remains quarantined; its observation hooks do not dispatch or accept
work. This entry starts a fresh run and refuses an existing evidence directory.
After interruption, retain its candidate, leases, controller state and receipts;
reconcile process termination explicitly before recovery or ownership transfer.
A durable store is not proof that the CLI supports automatic run resume.
See installed `orchestration-contract.md`,
`runtime/config/1.23.0/orchestration-policy.json` and
`runtime-source-provenance.json` for the packet, policy and source receipt.

## RÁPIDO → BIEN → BARATO

Optimize time to the complete usable result, including verification and
corrections. Preserve the requested behavior, architecture, data boundaries and
authorization. A first diff, successful command, installed file or model's
completion message does not establish accepted behavior.

Version 1.23.0 introduces persistent, event-driven orchestration and the
measurement contract below. Prior published versions remain immutable rollback
targets. Installed HOME content remains generated state; it never silently
becomes the canonical source for this version.

## Authority and completion

Retain settled user decisions and operation-specific authorization across
resumes. Implementation, local installation, commit, push, PR, merge, release,
production, destructive cleanup and paid-service activation remain distinct
operations. Preparing this version or running an authorized benchmark does not
grant the other operations. Complete independent authorized preparation while a
genuine external dependency is pending.

Define completion by the requested behavior, relevant validation and authorized
endpoint. Continue through integration, review and corrections until those
conditions hold. Preserve required repository checks. Reuse applicable evidence;
repeat checks after a relevant change, failure or unresolved concern. A rejected
or blocked attempt has no accepted-delivery timestamp.

## Fixed orchestrator and attested workers

An orchestration run chooses either Sol High (`gpt-5.6-sol`, `high`) or Astra
xhigh (`gpt-6-astra`, `xhigh`) as its orchestrator at the start. That orchestrator
retains decomposition, decisions, integration, conflicts, verification and final
delivery. A roster recommendation does not change the running parent.

Astra xhigh owns planning, consequential decisions, independent review and any
specialist work requiring its capabilities. DeepSeek V4.1 Flash High
(`opencode-go/deepseek-v4.1-flash`, `high`) may execute bounded implementation
packets through the explicit external adapter. Luna is excluded from this
policy and every descendant. The model profiles are requested identities until
the active host supplies runtime evidence.

At worker start and every resume, record requested and observed provider, model,
effort, host, run/session identity and actual capabilities. Preserve the source
of the observation. Configuration files, a worker's self-description and a
successful spawn are not independent runtime attestation. Missing or conflicting
evidence remains explicit and blocks a model-comparative acceptance claim.

No silent provider, model, effort or capability substitution is allowed. A
capability gap or unavailable adapter returns a concrete blocked receipt. Any
authorized handoff retains the candidate and evidence, terminates the old writer
before transferring ownership, and records the new identity and remaining work.

## Exact execution and persistent scheduling

The parent resolves each task once and supplies a compact ordered packet:
objective, exact repository and revision context, owned paths, dependencies,
settled decisions, actions, expected observations, mandatory checks, stop
conditions and evidence receipt. Outcome delegation is an explicit exception
with a recorded reason and the same acceptance bar. Workers execute the packet;
they do not repeat lifecycle discovery or widen their write set.

Deterministic code owns durable run state, the dependency graph, exclusive path
ownership, provider/session concurrency limits, dispatch, cancellation,
completion events, retries and terminal decisions. Overlapping paths, including
ancestor/descendant paths, cannot have concurrent writers. Disjoint writes alone
do not authorize concurrency when a shared provider state or dependency requires
serialization. Retries and resumes recover the persisted state instead of
dispatching duplicate work.

The scheduler responds to explicit state-changing events. Models do not spend
turns polling workers or managing sleep loops. Persist dispatch intent and
ownership before starting a worker. Process-close and native completion events
identify their run, packet and attempt; stale or duplicate events cannot release
another writer's ownership or complete a newer attempt. A resume reconciles
existing processes and leases before scheduling more work.

Worker success requires the permitted write set, required checks and a valid
receipt. Dependent work is released only by the required accepted state, not by a
zero process exit. The parent integrates and reviews changes; deterministic
scheduling never certifies semantic correctness.

## Jev at semantic boundaries

Within an explicitly selected Jev run, Jev supplies bounded typed semantic
judgments at packet, change and review boundaries. The selected comparative
strategy supplies compact context or denser bounded flow summaries containing
the decision, relevant settled requirements, selected evidence and uncertainty. The exact request, schema,
model/version, duration and reported usage remain attributable to that boundary.
Do not send credentials, private identifiers or unrelated source content.

Code retains policy, arithmetic, dependency invariants, ownership, authority,
side effects and acceptance. Jev cannot acquire a lease, choose an unauthorized
model, dispatch a worker, waive a check, mark a review finding resolved or infer
browser availability. A demonstrated dependency blocker takes precedence over
a capability recommendation. Classifier failures or uncertain judgments remain
visible to the parent; they are not converted into success.

## Review and product evidence

Planning/review uses Astra xhigh. Add independent capable scrutiny for the risks
that matter, preserving intention, correctness, security, performance and visual
responsibilities where applicable. Resolve blocker/high findings and explicitly
dispose of medium findings before acceptance. A review response or timeout does
not by itself close findings. Correct the first mismatch in a bounded packet and
review its delta plus unresolved risks.

Assign browser and visual acceptance only to a role with actual capabilities and
the host's authorized browser mechanism. Inspect the affected real flow and use
approved references. Independent visual critique and corrections precede final
media when visual acceptance applies. Test, lint, file-copy, browser and human
approval evidence answer different questions and remain separately recorded.

## Task-active measurement

Every benchmark arm uses the same task, baseline, acceptance criteria, allowed
environment and accounting boundary. Start task-active timing when that arm
receives the executable task; finish it only at accepted delivery. Record pauses
and task-relevant tool/provider/browser/review/correction waits explicitly. Keep
experiment preparation, infrastructure setup and harness calibration outside
the arm's task-active interval and report their separate cost and duration.

Report elapsed task-active time separately from summed worker durations;
concurrent intervals must not be double-counted. Keep first useful evidence,
first implementation, first passing required checks and accepted delivery as
distinct observations. Preserve failed requests, retries, rejected candidates,
handoff failures and user corrections.

An arm's full cost includes its orchestrator, writers, Jev, planners, reviewers,
browser/vision work, tools, failed attempts and corrections through acceptance
or its recorded stop. Retain reported units, pricing provenance and billable
usage by provider. Unknown usage/cost stays unknown, never zero. Costs shared
between arms need a declared allocation rule before comparison. Do not rank
incomplete arms as accepted deliveries or compare a partial writer bill with a
complete arm.

## Distribution and evidence

Every installed artifact has an explicit source path, SHA-256, destination,
harness and mirror relationship in `manifests/1.23.4.json`. Sources must match
the selected canonical source commit before installation. Generate a new
version to change published behavior; never rewrite a prior hash to approve
drifted bytes. Historical recovery requires bytes that already match the
published hash and an explicit provenance record.

Tests and installation, audit, drift, repair and rollback scenarios use isolated
`--home` directories and preserve unrelated files. Installing policy or copying
an adapter is not evidence of host discovery, loading or operational influence.
Runtime enforcement, model attestation and real product benchmark acceptance
require their own observable evidence.
